--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "axios": "^1.3.5",
     "canvas": "^2.11.2",
+    "chokidar": "^3.5.3",
     "discord.js": "^14.9.0",
     "dotenv": "^16.1.4",
     "nodemon": "^2.0.22",
     "replicate": "^0.12.1",
+    "sharp": "^0.32.1",
     "waifu2x": "^1.1.7"
   }
 }
